# cantonese2

./: .gitignore  README.md  initial.py  initial.sql  main.py  pyproject.toml  vocabulary.db
server/: crud.py  database.py  dependencies.py  main.py  models.py  templates.py
server/routes/: __init__.py  exam.py  favicon.py  index.py  jyutping.py  tags.py  vocabulary.py
static/: base.css  exam.css  exam.js  script.js  table.css
web/: exam.html  index.html
