[tool.poetry]
name = "cantonese2"
version = "0.1.0"
description = "A program for learning Cantonese"
authors = ["jonnyDurston <jonathan.durston@btinternet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
jinja2 = "^3.1.5"
psycopg = {extras = ["pool"], version = "^3.2.4"}
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
