[tool.poetry]
name = "cantonese2"
version = "0.1.0"
description = "A program for learning Cantonese"
authors = ["jonnyDurston"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
jinja2 = "^3.1.5"
uvicorn = "^0.34.0"
pycantonese = "^3.4.0"
setuptools = "^75.8.0"
pydantic = "^2.10.5"
aiosqlite = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
